--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multipurpose chrome extension</title>
+    <!-- <link rel="stylesheet" href="./popup.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono:wght@500&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
@@ -63,11 +72,44 @@
             </div>
             <div id="todo-list"></div>
         </div>
+        <div class="alarm">
+            <div class="wrapper">
+                <div class="timer-display">00:00:00</div>
+                <div class="containerAlarm">
+                  <div class="inputs">
+                    <input
+                      type="number"
+                      id="hourInput"
+                      placeholder="00"
+                      min="0"
+                      max="23"
+                    />
+                    <input
+                      type="number"
+                      id="minuteInput"
+                      placeholder="00"
+                      min="0"
+                      max="59"
+                    />
+                  </div>
+                  <button id="set">Add Alarm</button>
+                  <div class="activeAlarms"></div>
+                </div>
+              </div>
+        </div>
+        <div class="website_blocker">
+            <h1>Block Website</h1>
+            <input type="text" id="inputFieldWB" placeholder="Enter website">
+            <button id="submitButtonWB">Block</button>
+            <div id="resultWB"></div>
+        </div>
     </div>
     <script src="./script(randomJoke).js"></script>
     <script src="./script(motivationalQuote).js"></script>
     <script src="./script(calculator).js"></script>
     <script src="./script(todo-list).js"></script>
+    <script src="./script(alarm).js"></script>
+    <script src="./script(website_blocker).js"></script>
 </body>
 
 </html>
